@@ -1,3 +1,10 @@
+Next Version
+
+    - Fixed issue with circular autowiring dependencies that include the
+      SpringContextApplication bean; this also eliminates the requirement
+      to create custom static get() method in subclass (issue #7)
+    - Removed deprecated ContextApplicationFactoryBean
+
 Version 1.0.315 Released March 26, 2012
 
     - Added CSVWriter
